--- a/Capstone02/Views/Parents/Create.cshtml
+++ b/Capstone02/Views/Parents/Create.cshtml
@@ -33,6 +33,19 @@
                                 <input asp-for="ContactNumber" class="form-control" />
                                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
                             </div>
+                            <div class="col-md-6 mb-3">
+                                <h6 class="form-label">E-mail Address</h6>
+                                <input asp-for="EmailAddress" class="form-control" />
+                                <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3">
+                            <div class="col-md-6 mb-3">
+                                <h6 class="form-label">Password</h6>
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
                         </div>
 
                         <div class="row mb-3">
