--- a/Capstone02/Views/ParentUI/Index.cshtml
+++ b/Capstone02/Views/ParentUI/Index.cshtml
@@ -1,122 +1,126 @@
-﻿<style>
-    body {
+﻿
+
+
+
+    <style>
+        body {
         margin: 0;
         padding: 0;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background-color: #f4f4f4;
-    }
+        }
 
-    nav {
+        nav {
         background-color: var(--color-default);
         color: white;
         padding: 10px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-
-        nav img {
-            max-height: 40px;
-            margin-right: 10px;
         }
 
-    .logout-icon {
+        nav img {
+        max-height: 40px;
+        margin-right: 10px;
+        }
+
+        .logout-icon {
         cursor: pointer;
         display: flex;
         align-items: center;
-    }
+        }
 
-    .logout-text {
+        .logout-text {
         margin-left: 5px;
-    }
+        }
 
-    table {
+        table {
         width: 60%;
         margin: 20px auto;
         border-collapse: collapse;
-    }
+        }
 
-    th, td {
+        th, td {
         border: 1px solid var(--color-default);
         padding: 10px;
         text-align: center;
-    }
+        }
 
-    th {
+        th {
         background-color: var(--color-default);
         color: white;
         text-align: center;
-    }
+        }
 
-    td {
+        td {
         background-color: lightgray;
-    }
+        }
 
-    .highlight-paid {
+        .highlight-paid {
         background-color: #00FF00;
         border-radius: 5px;
-    }
+        }
 
-    .highlight-not-paid {
+        .highlight-not-paid {
         background-color: #E57373;
         border-radius: 5px;
-    }
+        }
 
-    .border-right {
+        .border-right {
         color: white;
-    }
+        }
 
-    .button-container {
+        .button-container {
         text-align: center;
         margin-top: 60px;
-    }
+        }
 
-    .action-button {
+        .action-button {
         padding: 10px 20px;
         background-color: var(--color-default); /* Use your desired button color */
         color: white;
         border: none;
         border-radius: 5px;
         cursor: pointer;
-    }
-
-        .action-button:hover {
-            background-color: #4d5569; /* Change to your desired hover color */
         }
 
-    header {
+        .action-button:hover {
+        background-color: #4d5569; /* Change to your desired hover color */
+        }
+
+        header {
         color: var(--color-default);
         text-align: left;
         padding: 30px 0;
-    }
+        }
 
-    h1 {
+        h1 {
         font-size: 2.5em;
         margin: 10px 0;
-    }
+        }
 
-    p {
+        p {
         font-size: 1.4em;
         margin: 0;
-    }
+        }
 
-    .child-dropdown {
+        .child-dropdown {
         margin-top: 10px;
-    }
+        }
 
-    select {
+        select {
         padding: 6px;
         font-size: 1em;
         border: 1px solid var(--color-default);
         border-radius: 5px;
         width: 190px;
-    }
+        }
 
-    label {
+        label {
         font-size: 1.2em;
-    }
+        }
 
-    .display-box {
+        .display-box {
         position: absolute;
         top: 25%;
         left: 50%;
@@ -127,87 +131,90 @@
         border-radius: 12px;
         text-align: center;
         width: 200px;
-    }
+        }
 
-    .display-box p1 {
+        .display-box p1 {
         font-size: 1em;
-    }
+        }
 
-    .display-box p {
+        .display-box p {
         font-size: 2em;
-    }
-</style>
+        }
+    </style>
 
-<nav>
-    <div>
-        <img src="../Images/ICENHSLogo.png" alt="ICENHS Logo" />
-        <span>ICENHS - PTA Fees Collection Management System (PTAFCMS)</span>
-    </div>
-    <div class="logout-icon mr-2" onclick="logout()">
-        <i class='bx bx-log-out mr-2'></i>
-        <span class="logout-text">Logout</span>
-    </div>
-</nav>
 
-<header>
-        <h1>Welcome!</h1>
-        <p>Al-Yoshry L. Abdulfatah</p>
-        <div class="child-dropdown">
-            <label for="children">Child/ren:</label>
-            <select id="children" name="children">
-            <option value="Alano S. Abdulfatah" selected>Alano S. Abdulfatah</option>
-            <option value="Asnaina S. Abdulfatah">Asnaina S. Abdulfatah</option>
-            <option value="Aslanie S. Abdulfatah">Aslanie S. Abdulfatah</option>
-            </select>
+
+
+        <nav>
+            <div>
+                <img src="../Images/ICENHSLogo.png" alt="ICENHS Logo" />
+                <span>ICENHS - PTA Fees Collection Management System (PTAFCMS)</span>
+            </div>
+            <partial name="_LoginPartial" />
+
+        </nav>
+
+        <header>
+            <h1>Welcome!</h1>
+            <p>Al-Yoshry L. Abdulfatah</p>
+            <div class="child-dropdown">
+                <label for="children">Child/ren:</label>
+                <select id="children" name="children">
+                    <option value="Alano S. Abdulfatah" selected>Alano S. Abdulfatah</option>
+                    <option value="Asnaina S. Abdulfatah">Asnaina S. Abdulfatah</option>
+                    <option value="Aslanie S. Abdulfatah">Aslanie S. Abdulfatah</option>
+                </select>
+            </div>
+            <div class="display-box">
+                <p1>Total Balance:</p1>
+                <p>₱ 2, 175.00</p>
+            </div>
+        </header>
+        <div class="container">
+            <table>
+                <thead>
+                    <tr>
+                        <th class="border-right">List of Fees</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Red Cross</td>
+                        <td><span class="highlight-paid">Paid</span></td>
+                    </tr>
+                    <tr>
+                        <td>PTA Membership</td>
+                        <td><span class="highlight-not-paid">Not Paid</span></td>
+                    </tr>
+                    <tr>
+                        <td>Insurance</td>
+                        <td><span class="highlight-paid">Paid</span></td>
+                    </tr>
+                    <tr>
+                        <td>Publication</td>
+                        <td><span class="highlight-paid">Paid</span></td>
+                    </tr>
+                    <tr>
+                        <td>RF I.D.</td>
+                        <td><span class="highlight-paid">Paid</span></td>
+                    </tr>
+                    <tr>
+                        <td>SSG</td>
+                        <td><span class="highlight-not-paid">Not Paid</span></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="button-container">
+                <a  asp-action="Index1" class="btn btn-primary">Click here to Pay</a> 
+            </div>
+
         </div>
-        <div class="display-box">
-            <p1>Total Balance:</p1>
-            <p>₱ 2, 175.00</p>
-        </div>
-</header>
-
-<table>
-    <thead>
-        <tr>
-            <th class="border-right">List of Fees</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Red Cross</td>
-            <td><span class="highlight-paid">Paid</span></td>
-        </tr>
-        <tr>
-            <td>PTA Membership</td>
-            <td><span class="highlight-not-paid">Not Paid</span></td>
-        </tr>
-        <tr>
-            <td>Insurance</td>
-            <td><span class="highlight-paid">Paid</span></td>
-        </tr>
-        <tr>
-            <td>Publication</td>
-            <td><span class="highlight-paid">Paid</span></td>
-        </tr>
-        <tr>
-            <td>RF I.D.</td>
-            <td><span class="highlight-paid">Paid</span></td>
-        </tr>
-        <tr>
-            <td>SSG</td>
-            <td><span class="highlight-not-paid">Not Paid</span></td>
-        </tr>
-    </tbody>
-</table>
-
-<div class="button-container">
-    <a  asp-action="Index1" class="btn btn-primary">Click here to Pay</a> 
-</div>
-
-<script>
-    document.querySelector('.btn-primary').addEventListener('click', function () {
+    
+    <script>
+        document.querySelector('.btn-primary').addEventListener('click', function () {
         var selectedChild = document.getElementById("children").value;
         sessionStorage.setItem('selectedChild', selectedChild);
-    });
-</script>
+        });
+    </script>
