--- a/Capstone02/Views/Shared/_SideBar.cshtml
+++ b/Capstone02/Views/Shared/_SideBar.cshtml
@@ -66,7 +66,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" asp-area="" asp-controller="PTAFees" asp-action="Index">
-                    <i class='bx bxs-credit-card'></i> <span class="menu-text">Fees</span>
+                    <i class='bx bxs-spreadsheet'></i> <span class="menu-text">Fees</span>
                 </a>
             </li>
             <li class="nav-item">
