--- a/Capstone02/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Capstone02/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,7 +18,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to top left, navy 50%, transparent 50%);
+        /* background: linear-gradient(to top left, navy 50%, transparent 50%); */
         z-index: -1;
     }
 
